# TOconcursos-backend

./: .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init-minio.sh  script_dados_teste.sql
app/: app.db  database.py  import.sql  main.py  pyproject.toml  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 013a1dd4cbfe_coluna_valor_pagamento.py  06afb43eedcd_joined_table_inheritance_pagamento.py  1c69a32d208d_adiciona_campo_de_login_google_torna_.py  2f3a9becb9fa_migracao_inicial_de_todas_as_tabelas.py  3aefc716e32d_coluna_data_pagamento_e_relacionamento_.py  5eb9691a9ef4_criação_inicial_do_banco.py  6f2c6ac0ee2e_remove_modelos.py  75d21ee35bf9_modelo_de_cartao.py  89e4b41bfdb6_coluna_com_date_time_padronizadas.py  97337850fccf_revisão_corrigida.py  a1b2c3d4e5f6_remover_campo_ja_respondeu_da_tabela_questoes.py  aeb7a2a08cd2_criação_inicial_das_tabelas.py  eb6cd1cf012d_modelos_de_pagamento.py
app/core/exceptions/: exception.py
app/core/handler/: exception_handler.py
app/docs/: projeto.plantuml
app/models/: __init__.py
app/routers/: __init__.py  auth_router.py  banca_router.py  comentario_router.py  cronograma_router.py  disciplina_router.py  historico_router.py  historico_simulado_router.py  instituicao_router.py  objetivos_router.py  orgao_router.py  perfil_router.py  plano_router.py  questao_router.py  resolucao_questao_router.py  resolucao_questao_simulado_router.py  usuario_router.py
app/scripts/: seed_inicial.py
app/shared/: get_current_user.py  response.py
app/utils/: email_sender.py  security.py
(+95 files in other folders)
